--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <ul id="messages">
     <p id="its-hidden-beatch" ></p>
     </ul>
-    <form id="form" caction="">
+    <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
     <script src="../socket.io/socket.io.js"></script> <script>
@@ -28,6 +28,7 @@
         var name = prompt('Enter your nickname');
 
         socket.emit("name", name);
+
 
         var messages = document.getElementById('messages')
         var form = document.getElementById('form')
@@ -61,6 +62,14 @@
                 item.textContent = msg; messages.appendChild(item);
                 window.scrollTo(0, document.body.scrollHeight);
   });
+        socket.on('user connected', (names) => { 
+            console.log(socket.id)
+            console.log(names)
+        })
+
+        socket.on('user disconnected', (names) => { 
+            console.log(names)
+        })
     </script>
   </body>
 </html>
